# design_patterns

./: CMakeLists.txt
app/: CMakeLists.txt  command_app.cpp  main.cpp
include/Hello_lib/: hello.h
include/design_patterns/: command.h  singleton.h  state.h
src/: CMakeLists.txt  command.cpp  hello.cpp  singleton.cpp  state.cpp
test/: CMakeLists.txt  template_gtest.cpp  test_singleton.cpp  test_state.cpp  testmain.cpp
